# mirror-whatsapp-ai-bot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  cloudbuild.yml  docker-compose.dev.yml
backend/: .gitignore  Makefile  alembic.ini  pyproject.toml  requirements.txt  setup.py  start.sh
backend/alembic/: env.py
backend/alembic/.versions.old/: 0407e4efaeaf_remove_contact_from_conversation.py  1c4dc0c015bf_migrate_ids_to_uuid.py  4d3e94d2643c_add_last_message_at_to_conversations.py  74fea0132fcb_make_aditional_attributes_a_mutabledict.py  84f214006cde_make_channel_id_string.py  9524bed6dd7d_make_contact_id_and_contact_inbox_.py
backend/alembic/versions/: 003c78705774_add_extracted_content_to_the_knowledge_.py  060f68470afd_add_initial_status_to_inbox.py  0743fb99ca00_remove_is_active_flag.py  097e90eea95e_add_beta_testers_table.py  0e79765c725f_create_test_models_table.py  1063f8d5f5d9_add_ping_pong_circuit_breaker_fields_to_.py  1239c30c45d8_add_simulations_simulation_messages_and_.py  1b205b5284d2_add_account_id_channel_id_channel_type_.py  223583cb0835_add_scheduling_user_id.py  27d7fcf69895_add_timezone_to_sent_at.py  2b5899baa957_add_is_whatsapp_and_is_whatsapp_business.py  2bc063ca32e2_add_whatsapp_cloud_config_and_channel_s_.py  3256a47b6090_add_google_oauth_token.py  (+57 more)
backend/app/: config.py  database.py  main.py
backend/data/: demo_data.json
backend/scripts/: consumer_worker.py  load_demo_data.py  migrate_profile_to_db.py  processor_worker.py  responser_sender_worker.py  setup_onboarding.py  simulation_cli.py  test_e2e_flow.py
frontend/: api.js  (+9 more)
(+623 files in other folders)
